src/objects/CSOD_Transcript_Fields_Mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>Batch_Name__c</fullName>
        <label>Batch Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Staging_Field__c</fullName>
        <label>CS Staging Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Education_Transcript_Field__c</fullName>
        <label>Object Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ignore__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ignore</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCheckbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCheckbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RefObject__c</fullName>
        <description>Object to which external Id is provided</description>
        <inlineHelpText>Object to which external Id is provided</inlineHelpText>
        <label>RefObject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isExternalId__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is External Id</label>
        <type>Checkbox</type>
    </fields>
    <label>CSOD Transcript Fields Mapping</label>
    <listViews>
        <fullName>All_Fields</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>CS_Staging_Field__c</columns>
        <columns>Education_Transcript_Field__c</columns>
        <columns>Ignore__c</columns>
        <columns>isExternalId__c</columns>
        <columns>RefObject__c</columns>
        <columns>Batch_Name__c</columns>
        <columns>IsCheckbox__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Fields</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>CSOD Transcript Fields Mapping</pluralLabel>
</CustomObject>